8378562: nsk/monitoring/ThreadMXBean/ThreadInfo/Deadlock tests report native access warning